css/style.css
/* Grep Mekaniske      */
/* av Edison Menlo     */
/* Svein Erik Farstad  */

body {
	padding: 0;
}

h1, h2, h3, .featurette-heading {
	font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
	font-weight: bold;
	color: rgb(51,204,204);
	line-height: 1.1;
}

h1 span {
	color: #339999;
}

a {
	color: #339999;
}

a:hover {
	color: #339999;
}

.bigwrap {
	background: white;
	z-index: 3;
	position: relative;
	padding-top: 60px;
}
.row {
	margin-left: 0;
	margin-right: 0;
}

/* Banner */
.carousel-inner {
	position: fixed;
	z-index: 0;
}
.navbar-wrapper  {
	background: url("../img/logo.png");
	opacity: 0.8;
	display: block;
	height: 65px;
	margin: 35px 0 0 60px;
	width: 128px;
}
.navbar-wrapper a {
	display: block;
	width: 100%;
	height: 100%;
}


/* Claim */
.claim {
position: relative;
	z-index: 2;
}

.claim, footer {
	background: #399999;
	padding: 50px 0;
	color: white;
}
.transp {
	background: #399999;
	opacity: 0.3;
	height: 30px;
	position: relative;
	margin: -30px 0 0 0;
}
.transp2 {
	background: #399999;
	opacity: 0.3;
	height: 30px;
	position: relative;
}

/* div.pynt2 {
	background: url("../img/element.png") #339999;
} */

.navbar-container h1, .claim h1 {
	color: white;
	display: inline-block;
}

.claim h1 {
	margin-top: 0;
	line-height: 1.3;
	font-weight: normal;
}

.claim .lead {
	margin-top: 20px;
}

.claim .lead a {
	color: rgba(255,255,255,0.6);
}

.claim .container {
	max-width: 60%;
}


/* Content */
.rightpic {
	-webkit-box-shadow: 20px 20px 0px 0px rgba(51, 153, 153, 1);
	-moz-box-shadow:    20px 20px 0px 0px rgba(51, 153, 153, 1);
	box-shadow:         20px 20px 0px 0px rgba(51, 153, 153, 1);
}

.leftpic {
	-webkit-box-shadow: -20px 20px 0px 0px rgba(51, 153, 153, 1);
	-moz-box-shadow:    -20px 20px 0px 0px rgba(51, 153, 153, 1);
	box-shadow:         -20px 20px 0px 0px rgba(51, 153, 153, 1);
}


/* Referanser */
h3.whited {
	color: white;
	margin: 20px auto 20px auto;
} 

.referanser {
	margin: 0 auto 80px auto;
	padding-bottom: 90px;
}
.referanser:before {
	content: "";
	height: 15px;
	background: #339999;
	opacity: 0.4;
	width: 100%;
	position: absolute;
	top: -15px;
}
.referanser:after {
	content: "";
	height: 15px;
	background: #339999;
	opacity: 0.2;
	width: 100%;
	position: absolute;
	bottom: -15px;
}
.referanser img {
	opacity: 0.3;
	height: 50px;
	margin: 10px 40px 10px 0px;
	max-width: 100%;
}

/* Lister */
.lister h2 {
	margin-bottom: 20px;
}
ul {
	margin: 0 0 0 0;
	font-weight: 200;
	font-size: 21px;
}
ul li {
	list-style: none;
}
ul .glyphicon {
	color: #339999;
	margin-left: -38px;
	padding-right: 12px;
}
span.inLi {
	
}

.kunder h4 {
	 margin:10px 0 2px 0;
 }
 .kunder h4, .kunder p {
	 	 padding: 0 0 0 4px;
 }
 

/* Contact */
.glyphicon {
	margin-right: 5px;
}

.people h1 {
	margin: 0 0 30px 0;
	color: #339999;
	padding: 0 15px;
}

.col-centered{
    float: none;
    margin: 0 auto;
}

.col-lg-4 ul, .col-lg-4 h2, .col-lg-4 h4  {
	text-align: left;
}

.marketing .col-lg-4 p, .col-lg-4 h4 {
	text-align: left;
	margin-left: 0;
	margin-right: 0;
}

#peeps .peeps {
	padding-left: 0;
}

iframe {
	width: 100%;
}

.people .lead {
	margin-bottom: 5px;
}
.people h5 {
	margin-bottom: 5px;
	margin-top: 10px;
}
.people .col-lg-4 h4.snd {
	margin-top: 10px;	
}

.people .col-lg-4 h5.snd {
	margin-top: 15px;
}
/* Footer */
footer a, footer a:hover {
	color: rgba(255,255,255,0.5);
}
div.pynt {
	background: url("../img/frise.png");
	background-repeat: repeat-x;
	height: 50px;
	background-position: bottom;
	margin-top: 90px;
}


/* Responsive */

@media (max-width: 1200px){ 
		.peeps {
		margin-bottom: 30px;
	}

	
}

@media (max-width: 992px){
	.navbar-wrapper {
		margin: 35px auto;	
	}
	.claim .container {
	max-width: 90%;
	}
	.claim {
		padding: 40px 0;
	}
	.rightpic {
		margin-top: 30px;
	}
	.leftpic {
		margin-bottom: 30px;
	}
	.featurette-divider {
		margin: 40px 0;
	}
	.carousel {
		height: 400px;
	}
	.carousel-inner {
		position: static;
	}

	.bigwrap .featurette-heading {
		margin-bottom: 20px;
	}
	.rightpic {
	-webkit-box-shadow: 10px 10px 0px 0px rgba(51, 153, 153, 1);
	-moz-box-shadow:    10px 10px 0px 0px rgba(51, 153, 153, 1);
	box-shadow:         10px 10px 0px 0px rgba(51, 153, 153, 1);
	}

	.leftpic {
		-webkit-box-shadow: -10px 10px 0px 0px rgba(51, 153, 153, 1);
		-moz-box-shadow:    -10px 10px 0px 0px rgba(51, 153, 153, 1);
		box-shadow:         -10px 10px 0px 0px rgba(51, 153, 153, 1);
	}
	footer .text-center, footer .text-right {
		text-align: left;
	}

	

}

@media (max-width: 768px) {
	h1, h2, h3, .featurette-heading {
		font-size: 28px;
	}
	
	ul {
		font-size: 16px;
		font-weight: 200;
		line-height: 1.4;
	}
	.referanser img {
	opacity: 0.3;
	height: 50px;
	margin: 10px 0px 10px 0px;
	max-width: 100%;
	}
	
	#TopVideo {
		display: none;
	}
	
	.carousel .item {
		background: url("../img/top.png");
		background-size: cover;
		background-position: center center;
	}
}

